# kaggle-bengaliai-speech

./: .gitignore  README.md  bengali-finetuning-baseline-wav2vec2-inference.ipynb  conda_requirements.txt  pyproject.toml  requirements.txt  submission.csv
exp/: find_best_params.ipynb  find_best_params.py  finetune.ipynb  finetune.py  finetune_fold.py  finetune_fold_dirty_data.py  finetune_fold_wav2vec2-small-70000-clear80p-without-unigrams.py  finetune_fold_wav2vec2-small-70000-clear80p.py  finetune_large_mms_1b_all_data.py  finetune_large_mms_1b_bengali.py  finetune_with_commonvoice.py  infer-wav2vec2-large-mms-1b-bengali.ipynb  infer-wav2vec2-large-mms-1b-bengali.py  infer.ipynb  measure_large_mms_1b_bengali_wer.py  measure_mos_with_nisqa.ipynb  measure_mos_with_nisqa.py  measure_saved_model_wer.py  measure_saved_model_wer.txt  measure_saved_model_wer_with_wav.py  measure_yellowking_model.py  measure_yellowking_model_wer.py  readme.md
exp/NISQA/: dataset-metadata.json
exp/NISQA/nisqa/: NISQA_model.py
exp/results/: NISQA_results.csv
exp/wandb/: latest-run
exp/wandb/run-20230926_163711-cj0ijmwi/: run-cj0ijmwi.wandb
exp/wandb/run-20230926_163711-cj0ijmwi/files/: config.yaml  requirements.txt  wandb-metadata.json
exp/wandb/run-20230926_172041-ubcgqbwv/files/: conda-environment.yaml  config.yaml  wandb-metadata.json  wandb-summary.json
input/: bengali-sr-download-public-trained-models.ipynb  readme.md
logs/: elapsed_time_log.py
random/: add_noise_info.ipynb  add_noise_info.py  beam_range_test.py  beam_width_test.txt  calculate_mos_pred_distr.ipynb  calculate_mos_pred_distr.py  convert_mp3_to_wav.ipynb  convert_mp3_to_wav.py  convert_mp3_to_wav_amend.ipynb  convert_mp3_to_wav_amend.py  finetune.ipynb  finetune.py  inspect_period_sets.py  measure_train_wer.ipynb  noise_reduction.ipynb  noise_reduction.py  noise_reduction_test.ipynb  noise_reduction_test.py  readme.md
src/: bengali-finetuning-baseline-wav2vec2-inference.ipynb  convert_to_wav.sh  final_submission.ipynb  final_submission.py  wav2vec2-large-mms-1b-bengali.ipynb
train/: finetune_fold_without_unigrams.py  finetune_with_commonvoice.py
