[tool.poetry]
name = "kaggle-bengali-ai-speech-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kaggle_bengali"}]

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
# for notebook
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
notebook = "^6.5.4"
# for type check
mypy = "^1.4.1"
# for data analysis
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pandas = "^2.0.3"
ydata-profiling = "^4.3.1,<5.0.0"
nbqa = "^1.7.0"
# for machine learning
einops = "^0.6.1"
tqdm = "^4.65.0"
lightgbm = "^4.0.0"
scikit-learn = "^1.3.0"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp311-cp311-linux_x86_64.whl"}
nltk = "^3.8.1"
transformers = "^4.32.0"
datasets = "^2.14.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
