[tool.poetry]
name = "kaggle-bengali-ai-speech-recognition"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "kaggle_bengali"}]

[tool.poetry.dependencies]
python = "3.10.12"
# for notebook
jupyter = "^1.0.0"
ipykernel = "^6.24.0"
notebook = "^6.5.4"
# for type check
mypy = "^1.4.1"
# for data analysis
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
pandas = "^2.0.3"
ydata-profiling = "^4.3.1,<5.0.0"
nbqa = "^1.7.0"
# for machine learning
einops = "^0.6.1"
tqdm = "^4.65.0"
lightgbm = "^4.0.0"
scikit-learn = "^1.3.0"
torch = {url = "https://download.pytorch.org/whl/cu118/torch-2.0.0%2Bcu118-cp310-cp310-linux_x86_64.whl"}
nltk = "^3.8.1"
transformers = "^4.32.0"
datasets = "^2.14.4"
# for this repository
jiwer = {path = "input/python-packages/jiwer/jiwer-2.3.0-py3-none-any.whl"}
bnunicodenormalizer = {path = "input/python-packages/normalizer/bnunicodenormalizer-0.0.24.tar.gz"}
attrs = {path = "input/python-packages/pyctcdecode/attrs-22.1.0-py2.py3-none-any.whl"}
exceptiongroup = {path = "input/python-packages/pyctcdecode/exceptiongroup-1.0.0rc9-py3-none-any.whl"}
hypothesis = {path = "input/python-packages/pyctcdecode/hypothesis-6.54.4-py3-none-any.whl"}
pygtrie = {path = "input/python-packages/pyctcdecode/pygtrie-2.5.0.tar.gz"}
sortedcontainers = {path = "input/python-packages/pyctcdecode/sortedcontainers-2.4.0-py2.py3-none-any.whl"}
pyctcdecode = {path = "input/python-packages/pyctcdecode/pyctcdecode-0.4.0-py2.py3-none-any.whl"}
librosa = "^0.10.1"
cloudpickle = "^2.2.1"
pypi-kenlm = {path = "input/python-packages/pypikenlm/pypi-kenlm-0.1.20220713.tar.gz"}
ipython = "^8.14.0"
noisereduce = "^2.0.1"
torchaudio = {url = "https://download.pytorch.org/whl/cu118/torchaudio-2.0.1%2Bcu118-cp310-cp310-linux_x86_64.whl"}
accelerate = "^0.23.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
